TODO: anyevent strict checking for $_ changes?

TODO: Kevin Ryde         (3.8K)   1 inbox       Glib child processes
	- INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve directly,
          and ->request and ->dns_unpack indirectly. Convenience functions
          such as AnyEvent::DNS::{a,txt,mx,srv} are not affected.
        - some read types (regex, netstring, json, storable) could
          errornously keep an AE::Handle object alive on their own
          (reported by Mohammad Toossi).
        - add more workarounds around child watcher bugs in IO::Async
          and (newly introduced) in POE.
        - use glib child watchers and try to work around its limitations,
          if possible (based on a patch by Kevin Ryde).
	- add support for (currently third-party) AnyEvent::Impl::FLTK.
        - many read types in AnyEvent::Handle would malfunction during
          transitions to TLS because of a "delete $self->{rbuf}".
          (reported by Gerald Galster).
        - resolve AnyEvent::Util::guard at first-use-time, not at load time,
          for further speed and memory savings when not used.
        - improve condvar blocking wait performance (probably only noticable
          with faster backends), also make it easier for event loops that
          do not support blocking waits.

5.34  Thu May 12 09:59:41 CEST 2011
	- AE::TLS didn't support both cert_file and key at the same time,
          due to some copy&paste bug (reported and analyzed by vti).
	- improve AE::Handle timeout documentation slightly.

5.33  Mon Feb  7 21:51:41 CET 2011
	- never appeared on CPAN, for unknown reasons.
	- AnyEvent::Handle on_connect_error - do not try to destroy a handle
          object when it's already gone (analyzed by Ryan Bullock).
	- update idna algorithm(s) to UTS#46 version 6.0.0.
        - preserve trailing dot in idn_to_ascii - testsuite says to preserve,